--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 5vh 5vw 5vh 5vw;
-  font-family: 'DM Sans', sans-serif, 'Cormorant', serif;
+  font-family: 'Source Sans', sans-serif, 'Source Serif', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
