Add basic rendering and styling for Feed and StoryCard components

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,5 +1,5 @@
 .display-container {
-  height: 90vh;
-  width: 60vw;
-  border: 1px cyan solid;
+  height: fit-content;
+  width: 55vw;
+  margin-bottom: 5%;
 }
