--- a/src/Components/StoryCard/StoryCard.css
+++ b/src/Components/StoryCard/StoryCard.css
@@ -65,9 +65,31 @@
   font-family: Source Pro;
   font-size: 1.3em;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .story-png {
   height: 150px;
   width: 250px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 50em) {
+  .story-png {
+    height: 50%;
+    width: 100%;
+  }
+
+  .bottom-row {
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-bottom: 10%;
+  }
+}
+
+@media screen and (max-width: 35em) {
+  .story-png {
+    height: 50%;
+    width: 100%;
+  }
 }
